# RTEP_Pedal_FORK

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: ci.yml
Schematics/: #auto_saved_files#  2_23inch_oled_hat_sku17009.stp  AINPUT.kicad_sch  AOUT.kicad_sch  BOM.csv  BOM.xlsx  CNTRL.kicad_sch  CODEC.kicad_sch  Harmoniser HAT.kicad_pcb  Harmoniser HAT.kicad_prl  Harmoniser HAT.kicad_pro  Harmoniser HAT.kicad_sch  MISC.kicad_sch  PWR.kicad_sch  RPI.kicad_sch  WM8649.kicad_sch  fp-info-cache  ~Harmoniser HAT.kicad_pcb.lck  ~Harmoniser HAT.kicad_sch.lck
Schematics/ASSEMBLY/: Harmoniser HAT-NPTH.drl  Harmoniser HAT-PTH.drl
Schematics/custom_footprint.pretty/: NYS2152G.kicad_mod
bitmaps/: main-screen.aseprite
bitmaps/keys-6x16/: w1_hover.c  w1_normal.c  w1_select.c  w2_hover.c  w2_normal.c  w2_select.c  w3_normal.c  w3_select.c
bitmaps/keys-6x16/files/: white_1.aseprite  white_1_hovered.aseprite  white_1_selected.aseprite  white_2.aseprite  white_2_hovered.aseprite  white_2_selected.aseprite  white_3.aseprite  white_3_hovered.aseprite  white_3_selected.aseprite
bitmaps/skeleton/: skeleton.c
bitmaps/skeleton/files/: main-screen.aseprite
code/: CMakeLists.txt  build.sh  ci_build.sh  clean_run.sh  clean_test.sh  config.cpp  digitalsignalchain.cpp  digitalsignalchain.h  init.sh  installdependencies.sh  main.cpp  outputmodule.cpp  run.sh  samplingmodule.cpp  samplingmodule.h  test.sh  unit_test.sh
code/assets/: config.cfg  eeprom_settings.txt  effects_chain.txt  shred.dts
code/effects/: ForceEffects.cpp  Fuzz.cpp  Fuzz.h  Gain.cpp  Gain.h  Harmonizer.cpp  Harmonizer.h  OctaveDoubler.cpp  OctaveDoubler.h
code/src/: CMakeLists.txt  Config.cpp  Config.h  DigitalSignalChain.cpp  DigitalSignalChain.h  DisplayHandler.cpp  DisplayHandler.h  Effect.h  EffectFactory.cpp  EffectFactory.h  EffectRegistration.h  Harmonizer.cpp  Harmonizer.h  MockOutputModule.cpp  MockOutputModule.h  MockSamplingModule.cpp  MockSamplingModule.h  OctaveDoubler.cpp  OctaveDoubler.h  OutputModule.h  SamplingModule.cpp  SamplingModule.h  main.cpp  memory-tracker.cpp
code/src/display/: DEV_Config.h  DisplayDriver.cpp  SSD1305.cpp
code/src/dsp/: DigitalSignalChain.cpp  DigitalSignalChain.h  EffectFactory.cpp  EffectFactory.h  ForceEffects.cpp
code/src/effects/: Effect.h  Fuzz.cpp  Fuzz.h  Gain.cpp  Gain.h  Harmonizer.cpp  Harmonizer.h  OctaveDoubler.h  memory-tracker.cpp
code/src/encoder_input/: EncoderHandler.cpp  EncoderHandler.h  MCP23017Driver.cpp  MCP23017Driver.h  MCP23017Registers.h
code/src/gpio_event/: gpioevent.cpp  gpioevent.h
code/src/options/: Config.cpp  Config.h
code/src/sampling/: AudioIO.cpp  AudioIO.h  Sample.cpp  Sample.h  SamplingModule.h
code/src/test/: CMakeLists.txt  MockOutputModule.cpp  MockOutputModule.h  MockSamplingModule.h  test.cpp
code/src/test/unit_tests/: CMakeLists.txt  unit_tests.cpp
code/src/ui/: DEV_Config.cpp  Display.cpp  Display.h  DisplayDriver.h  DisplayHandler.cpp  DisplayHandler.h  SSD1305.h  UIHandler.cpp  UIHandler.h
code/test/: CMakeLists.txt  MockOutputModule.cpp  MockOutputModule.h  MockSamplingModule.cpp  MockSamplingModule.h  test.cpp
report/: References.bib  l5eng.cls  main.tex  titlepage.tex
